# Taller-Prog-I-2021-1C-Chipa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.json  log.txt
src/: Message.cpp  Message.h  main.cpp
src/client/: Client.cpp  Client.h  ClientInput.cpp  ClientInput.h  Input.cpp  Input.h  Login.cpp  Login.h  Monitor.cpp  Monitor.h  Processor.cpp  Processor.h  SDLManager.cpp  SDLManager.h  SoundManager.cpp  SoundManager.h  Text.cpp  Text.h  View.cpp  View.h  clientMain.cpp  exMonitor.cpp  exMonitor.h
src/common/: BlockingQueue.h  Config.cpp  Config.h  Entity.cpp  Entity.h  Logger.cpp  Logger.h  Message.h  ProtectedQueue.cpp  ProtectedQueue.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  blockingQueue.h  data.json  default_data.json
src/common/protocols/: EntityInfo.cpp  EntityInfo.h  EntityProtocol.cpp  EntityProtocol.h  InputProtocol.cpp  InputProtocol.h
src/controller/: Config.cpp  Config.h  Controller.cpp  Controller.h  Logger.cpp  Logger.h  data.json  default_data.json  main.cpp
src/model/: Barrel.cpp  Barrel.h  Character.cpp  Character.h  CollisionManager.cpp  CollisionManager.h  Coordinate.cpp  Coordinate.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  ScreenConfig.h  Size.cpp  Size.h  Stair.h
src/model/Entities/: Barrel.cpp  Barrel.h  Character.cpp  Character.h  Ember.cpp  Ember.h  Fire.cpp  Fire.h  Flame.cpp  Flame.h  Monkey.cpp  Monkey.h  Movement.cpp  Movement.h  Platform.cpp  Platform.h  Princess.cpp  Princess.h  Stair.cpp  Stair.h
src/model/entities/: Barrel.cpp  Character.cpp  Character.h  Ember.cpp  Ember.h  Fire.cpp  Fire.h  Flame.cpp  Flame.h  Monkey.cpp  Monkey.h  Movement.h  Platform.cpp  Platform.h  Princess.cpp  Princess.h  Stair.h
src/server/: CollisionManager.cpp  CollisionManager.h  Config.cpp  Config.h  Entity.cpp  Entity.h  Game.cpp  Game.h  LoginManager.cpp  LoginManager.h  Peer.cpp  Peer.h  PeerManager.cpp  PeerManager.h  Receiver.cpp  Receiver.h  Reconnector.cpp  Reconnector.h  Sender.cpp  Sender.h  Server.cpp  Server.h  data.json  serverMain.cpp
src/server/entities/: Barrel.cpp  Barrel.h  Character.cpp  Character.h  Ember.cpp  Ember.h  Fire.cpp  Fire.h  Flame.cpp  Flame.h  Hammer.cpp  Hammer.h  Monkey.cpp  Monkey.h  Movement.cpp  Movement.h  Platform.cpp  Platform.h  Princess.cpp  Princess.h  Stair.cpp  Stair.h  StateManager.cpp  StateManager.h
src/view/: View.cpp  View.h  main.cpp
